syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = "./;proto";

service Goods{
  //商品接口
  rpc GoodsList(GoodsFilterReq) returns(GoodsListResp);
  //现在用户提交订单有多个商品，你得批量查询商品的信息吧
  rpc BatchGetGoods(BatchGoodsIdInfo) returns(GoodsListResp); //批量获取商品信息
  rpc CreateGoods(CreateGoodsInfo) returns (GoodsInfoResp);
  rpc DeleteGoods(DeleteGoodsInfo) returns (google.protobuf.Empty);
  rpc UpdateGoods(CreateGoodsInfo) returns (google.protobuf.Empty);
  rpc GetGoodsDetail(GoodInfoReq) returns(GoodsInfoResp);

  //商品分类
  rpc GetAllCategorysList(google.protobuf.Empty) returns(CategoryListResp); //获取所有的分类
  //获取子分类
  rpc GetSubCategory(CategoryListReq) returns(SubCategoryListResp);
  rpc CreateCategory(CategoryInfoReq) returns(CategoryInfoResp); //新建分类信息
  rpc DeleteCategory(DeleteCategoryReq) returns(google.protobuf.Empty); //删除分类
  rpc UpdateCategory(CategoryInfoReq) returns(google.protobuf.Empty); //修改分类信息

  //品牌和轮播图
  rpc BrandList(BrandFilterReq) returns(BrandListResp); //
  rpc CreateBrand(BrandReq) returns(BrandInfoResp); //新建品牌信息
  rpc DeleteBrand(BrandReq) returns(google.protobuf.Empty); //删除品牌
  rpc UpdateBrand(BrandReq) returns(google.protobuf.Empty); //修改品牌信息

  //轮播图
  rpc BannerList(google.protobuf.Empty) returns(BannerListResp); //获取轮播列表信息
  rpc CreateBanner(BannerReq) returns(BannerResp); //添加banner图
  rpc DeleteBanner(BannerReq) returns(google.protobuf.Empty); //删除轮播图
  rpc UpdateBanner(BannerReq) returns(google.protobuf.Empty); //修改轮播图

  //品牌分类
  rpc CategoryBrandList(CategoryBrandFilterReq) returns(CategoryBrandListResp); //获取轮播列表信息
  //通过category获取brands
  rpc GetCategoryBrandList(CategoryInfoReq) returns(BrandListResp);
  rpc CreateCategoryBrand(CategoryBrandReq) returns(CategoryBrandResp); //添加banner图
  rpc DeleteCategoryBrand(CategoryBrandReq) returns(google.protobuf.Empty); //删除轮播图
  rpc UpdateCategoryBrand(CategoryBrandReq) returns(google.protobuf.Empty); //修改轮播图
}

message CategoryListReq {
  int32 id = 1;
  int32 level = 2;
}

message CategoryInfoReq {
  int32 id = 1;
  string name = 2;
  int32 parentCategory = 3;
  int32 level = 4;
  bool isTab = 5;
}

message DeleteCategoryReq {
  int32 id = 1;
}

message QueryCategoryReq {
  int32 id = 1;
  string name = 2;
}

message CategoryInfoResp {
  int32 id = 1;
  string name = 2;
  int32 parentCategory = 3;
  int32 level = 4;
  bool isTab = 5;
}

message CategoryListResp {
  int32 total = 1;
  repeated CategoryInfoResp data = 2;
  string jsonData = 3;
}

message SubCategoryListResp {
  int32 total = 1;
  CategoryInfoResp info = 2;
  repeated CategoryInfoResp subCategorys = 3;
}

message CategoryBrandFilterReq  {
  int32 pages = 1;
  int32 pagePerNums = 2;
}

message FilterReq  {
  int32 pages = 1;
  int32 pagePerNums = 2;
}

message CategoryBrandReq{
  int32 id = 1;
  int32 categoryId = 2;
  int32 brandId = 3;
}
message CategoryBrandResp{
  int32 id = 1;
  BrandInfoResp brand = 2;
  CategoryInfoResp category = 3;
}

message BannerReq {
  int32 id = 1;
  int32 index = 2;
  string image = 3;
  string url = 4;
}

message BannerResp {
  int32 id = 1;
  int32 index = 2;
  string image = 3;
  string url = 4;
}

message BrandFilterReq {
  int32 pages = 1;
  int32 pagePerNums = 2;
}

message BrandReq {
  int32 id = 1;
  string name = 2;
  string logo = 3;
}

message BrandInfoResp {
  int32 id = 1;
  string name = 2;
  string logo = 3;
}

message BrandListResp {
  int32 total = 1;
  repeated BrandInfoResp data = 2;
}

message BannerListResp {
  int32 total = 1;
  repeated BannerResp data = 2;
}

message CategoryBrandListResp {
  int32 total = 1;
  repeated CategoryBrandResp data = 2;
}



message BatchGoodsIdInfo {
  repeated int32 id = 1;
}


message DeleteGoodsInfo {
  int32 id = 1;
}

message CategoryBriefInfoResp {
  int32 id = 1;
  string name = 2;
}

message CategoryFilterReq {
  int32 id = 1;
  bool  isTab = 2;
}

message GoodInfoReq {
  int32 id = 1;
}

message CreateGoodsInfo {
  int32 id = 1;
  string name = 2;
  string goodsSn = 3;
  int32 stocks = 7; //库存，
  float marketPrice = 8;
  float shopPrice = 9;
  string goodsBrief = 10;
  string goodsDesc = 11;
  bool shipFree = 12;
  repeated string images = 13;
  repeated string descImages = 14;
  string goodsFrontImage = 15;
  bool isNew = 16;
  bool isHot = 17;
  bool onSale = 18;
  int32 categoryId = 19;
  int32 brandId = 20;
}

message GoodsReduceReq {
  int32 GoodsId = 1;
  int32 nums = 2;
}

message BatchCategoryInfoReq {
  repeated int32 id = 1;
  int32 goodsNums = 2;
  int32 brandNums = 3;
}

message GoodsFilterReq  {
  int32 priceMin = 1;
  int32 priceMax = 2;
  bool  isHot = 3;
  bool  isNew = 4;
  bool  isTab = 5;
  int32 topCategory = 6;
  int32 pages = 7;
  int32 pagePerNums = 8;
  string keyWords = 9;
  int32 brand = 10;
}


message GoodsInfoResp {
  int32 id = 1;
  int32 categoryId = 2;
  string name = 3;
  string goodsSn = 4;
  int32 clickNum = 5;
  int32 soldNum = 6;
  int32 favNum = 7;
  float marketPrice = 9;
  float shopPrice = 10;
  string goodsBrief = 11;
  string goodsDesc = 12;
  bool shipFree = 13;
  repeated string images = 14;
  repeated string descImages = 15;
  string goodsFrontImage = 16;
  bool isNew = 17;
  bool isHot = 18;
  bool onSale = 19;
  int64 addTime = 20;
  CategoryBriefInfoResp category = 21;
  BrandInfoResp brand = 22;
}

message GoodsListResp {
  int32 total = 1;
  repeated GoodsInfoResp data = 2;
}